2005-10-06 10:45 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSequentialEvaluation) big bug, ment to call
	gridSmoothNodeVolumeSimplex, not gridSmoothNodeVolumeUVSimplex.
	Also echo face area uv, which should be constant.

2005-10-05 15:35 Mike Park  <mike.park@nasa.gov>

	* src/px_main.c (gridDumpBentEdgesForPX) added to dump list of bent
	edges to input curved elements into MIT ProjectX (PX).

2005-10-05 13:48 Mike Park  <mike.park@nasa.gov>

	* src/Makfile.am (pxNative,pxParasolid) to compile px_main.c driver
	* src/px_main.c (main) added to do validatation and midnode projection

2005-09-29 16:57 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) call gridSequentialEvaluation.
	* src/gridcad.c (gridSequentialEvaluation) added, but not working.

2005-09-29 15:46 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) incorporated gridPhase as -p #

2005-09-28 19:35 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridThisNodeCanBeModifiedInThisPhase) static
	helper method for gridSmooth to implement phase aspect.
	* src/gridcad.c (gridSmooth) queries
	gridThisNodeCanBeModifiedInThisPhase to implement phase aspect.
	* src/gridinsert.c (gridThisEdgeCanBeModifiedInThisPhase) static
	helper method for gridAdapt to implement phase aspect.
	* src/gridinsert.c (gridAdapt) queries
	gridThisEdgeCanBeModifiedInThisPhase to implement phase aspect.
	* src/gridswap.c (gridSwapEdge) queries gridPhase to implement
	volume phase aspect

2005-09-28 09:02 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridPhase,gridSetPhase) added to control grid
	adaptation phases (i.e. all, edge only, faces only, and volume
	only).

2005-09-27 19:06 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridEdgeRatioRange) compute longest and
	shortest edge in metric to find range.	
	* src/unit_main.c (STATUS) include edge range in condensed status
	message.

2005-09-26 09:31 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (leading_edge_spacing) modified to add a